<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/itemImgPel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/g_imagen_de_pel_cula"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvTitulo"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/tvTitulo"
            android:paddingStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/itemImgPel"
            app:layout_constraintEnd_toStartOf="@id/btnBorrar"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvGenero"
            android:paddingStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitulo"
            app:layout_constraintStart_toEndOf="@id/itemImgPel"
            app:layout_constraintEnd_toStartOf="@id/btnBorrar"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvYear"
            android:paddingStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvGenero"
            app:layout_constraintStart_toEndOf="@id/itemImgPel"
            app:layout_constraintEnd_toStartOf="@id/btnBorrar"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvComentario"
            android:layout_width="0dp"
            android:paddingStart="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvYear"
            app:layout_constraintStart_toEndOf="@id/itemImgPel"
            app:layout_constraintEnd_toStartOf="@id/btnBorrar"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            app:layout_constraintTop_toBottomOf="@id/btnBorrar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>